completed app with adding task and strike through when mark as completed using checkbox

--- a/to-do-app/package.json
+++ b/to-do-app/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.58.3",
+    "util": "^0.12.5",
+    "uuidv4": "^6.2.13"
   }
 }
